--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "vue-project",
+  "name": "game-review-site",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
@@ -10,14 +11,21 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "buefy": "^0.9.20",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mongoose": "^6.3.3",
     "pinia": "^2.0.13",
-    "vue": "^3.2.33",
+    "primevue": "^3.12.6",
+    "util": "^0.10.3",
+    "vue": "^3.2.34",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/jsdom": "^16.2.14",
-    "@types/node": "^16.11.27",
+    "@types/node": "^16.11.36",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vue/eslint-config-prettier": "^7.0.0",
