--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "mongoose": "^6.3.3",
     "pinia": "^2.0.13",
+    "primeicons": "^5.0.0",
     "primevue": "^3.12.6",
     "util": "^0.10.3",
     "vue": "^3.2.34",
