--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "node server.js",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview --port 5050",
+    "deploy": "surge --project ./dist --domain gamite-test.surge.sh",
     "test:unit": "vitest --environment jsdom",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
@@ -22,6 +24,7 @@
     "primevue": "^3.12.6",
     "util": "^0.10.3",
     "vue": "^3.2.34",
+    "vue-navigation-bar": "^5.0.2",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
@@ -36,11 +39,18 @@
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
+    "git-scripts": "^0.6.4",
     "jsdom": "^19.0.0",
     "prettier": "^2.5.1",
+    "surge": "^0.23.1",
     "typescript": "~4.6.3",
     "vite": "^2.9.5",
     "vitest": "^0.9.3",
     "vue-tsc": "^0.34.7"
+  },
+  "git": {
+    "scripts": {
+      "pre-push": "surge --project ./dist --domain gamite-test.surge.sh"
+    }
   }
 }
