--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview --port 5050",
+    "test:open": "peeky open",
+    "test": "peeky run",
     "test:unit": "vitest --environment jsdom",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
@@ -20,11 +22,13 @@
     "pinia": "^2.0.13",
     "primeicons": "^5.0.0",
     "primevue": "^3.12.6",
+    "sass": "^1.52.1",
     "util": "^0.10.3",
     "vue": "^3.2.34",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
+    "@peeky/test": "^0.13.5",
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/jsdom": "^16.2.14",
     "@types/node": "^16.11.36",
@@ -37,7 +41,9 @@
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
     "jsdom": "^19.0.0",
+    "node-sass": "^7.0.1",
     "prettier": "^2.5.1",
+    "sass-loader": "^13.0.0",
     "typescript": "~4.6.3",
     "vite": "^2.9.5",
     "vitest": "^0.9.3",
