Genre view commit

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 VITE_PASSWORD="admin"
 VITE_USERNAME="admin"
+DATABASE_URL = "mongodb+srv://admin:admin@cluster0.pnanr.mongodb.net/game-review-siteDB?retryWrites=true&w=majority"
+DB_USER="admin"
+DB_PASS="admin"
+VUE_APP_YOUTUBE_KEY = "AIzaSyCUtsBtHTxfKmxoxwJtHRx-k0HMlb4ctM8"
