--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
     "axios": "^0.27.2",
     "buefy": "^0.9.20",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "fortawesome": "0.0.1-security",
     "mongoose": "^6.3.3",
     "pinia": "^2.0.13",
     "primeicons": "^5.0.0",
@@ -27,8 +33,12 @@
     "sass": "^1.52.1",
     "util": "^0.10.3",
     "vue": "^3.2.37",
+    "vue-awesome": "^4.5.0",
+    "vue-fontawesome": "0.0.2",
     "vue-navigation-bar": "^5.0.2",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "vue-youtube": "^1.4.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@peeky/test": "^0.13.5",
