--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "peeky run",
     "test:unit": "vitest --environment jsdom",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "nodemon": "cd api && nodemon server.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -21,12 +22,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "buefy": "^0.9.20",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fortawesome": "0.0.1-security",
-    "mongoose": "^6.3.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.18",
     "pinia": "^2.0.13",
     "primeicons": "^5.0.0",
     "primevue": "^3.12.6",
@@ -35,6 +41,7 @@
     "vue": "^3.2.37",
     "vue-awesome": "^4.5.0",
     "vue-fontawesome": "0.0.2",
+    "vue-jwt-decode": "^0.1.0",
     "vue-navigation-bar": "^5.0.2",
     "vue-router": "^4.0.14",
     "vue-youtube": "^1.4.0",
