--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,6 +1,6 @@
 {
   "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "dbConnection.js"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "dbConnection.js", "api/db.js", "api/model"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
