--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vue-fontawesome": "0.0.2",
     "vue-navigation-bar": "^5.0.2",
     "vue-router": "^4.0.14",
+    "vue-toast-notification": "^3.0.4",
     "vue-youtube": "^1.4.0",
     "vuex": "^4.0.2"
   },
