--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,5 +29,4 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run test:open
-    - run: npm run deploy
-    - run: surge ./
+    - run: surge ./ ${{ secrets.SURGE_DOMAIN }} --token ${{ secrets.SURGE_TOKEN }}
